@@ -114,6 +114,11 @@ sub invoice_links {
 			 job => 1 );
 
     # currencies
+    if (!$form->{currencies}){
+        $form->error($locale->text(
+           'No currencies defined.  Please set these up under System/Defaults.'
+        ));
+    }
     @curr = split /:/, $form->{currencies};
     $form->{defaultcurrency} = $curr[0];
     chomp $form->{defaultcurrency};
